@@ -10,6 +10,7 @@ DATA_FIELD_SOURCES = \
 	$(DATA_FIELD_SRC_DIR)/FileReader.cpp \
 	$(DATA_FIELD_SRC_DIR)/Number.cpp \
 	$(DATA_FIELD_SRC_DIR)/Float.cpp \
+	$(DATA_FIELD_SRC_DIR)/Angle.cpp \
 	$(DATA_FIELD_SRC_DIR)/Time.cpp \
 	$(DATA_FIELD_SRC_DIR)/Integer.cpp \
 	$(DATA_FIELD_SRC_DIR)/String.cpp \
